--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   #my package
+  image_picker:
   get: ^4.6.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
