--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dev_dependencies:
     sdk: flutter
   #my package
   image_picker:
+  http:
   get: ^4.6.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
